Statistics > records refactor III
